Media queires of explore Page

--- a/explore.css
+++ b/explore.css
@@ -383,13 +383,44 @@ img {
     grid-template-columns: max-content;
   }
 }
-@media screen and (min-width: 576px) and (max-width: 767px) {
+@media screen and (min-width: 576px) and (max-width: 1000px) {
+  .exploreImage {
+    width: 100%;
+  }
   .exploreContent,
   .joinContainer {
     grid-template-columns: 380px;
     justify-content: center;
   }
+  .footerContent {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+  }
   .footerData {
-    grid-template-columns: repeat(3, max-content);
+    grid-template-columns: repeat(4, max-content);
+  }
+}
+@media (min-width: 1001px) {
+  .navList {
+    display: flex;
+    gap: 2rem;
+  }
+  .navClose {
+    display: none;
+  }
+  .navToggle {
+    display: none;
+  }
+  .exploreImage {
+    width: 100%;
+  }
+  .footerContent {
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    padding: 1.5rem 1rem;
+  }
+  .footerData {
+    grid-template-columns: repeat(4, max-content);
   }
 }/*# sourceMappingURL=explore.css.map */
