--- a/popular.css
+++ b/popular.css
@@ -245,6 +245,10 @@ img {
   .footerData {
     grid-template-columns: max-content;
   }
+  .popularContainer {
+    grid-template-columns: 150px;
+    justify-content: center;
+  }
 }
 @media screen and (min-width: 341px) and (max-width: 575px) {
   .footerLogo {
@@ -289,9 +293,6 @@ img {
   .popularContainer {
     grid-template-columns: repeat(3, 300px);
     justify-content: center;
-  }
-  .popularTitle h2 {
-    font-size: 1rem;
   }
   .footerContent {
     grid-template-columns: repeat(2, max-content);
