--- a/popular.scss
+++ b/popular.scss
@@ -266,6 +266,12 @@ img {
     grid-template-columns: max-content;
    
   }
+
+  
+  .popularContainer{
+    grid-template-columns: 150px;
+    justify-content: center;
+  }
 }
 
 
@@ -332,23 +338,23 @@ img {
       justify-content: center;
     }
 
+    .footerContent{
+      grid-template-columns: repeat(2,max-content);
+      justify-content: space-between;
+      padding:1.5rem 2rem;
+     }
+    
+        .footerData{
+          grid-template-columns: repeat(4,max-content);
+          justify-content: center;
+        }
+    }
+
+
+
+
+
   
-    }
-
-
- .footerContent{
-  grid-template-columns: repeat(2,max-content);
-  justify-content: space-between;
-  padding:1.5rem 2rem;
- }
-
-    .footerData{
-      grid-template-columns: repeat(4,max-content);
-      justify-content: center;
-    }
-
-
-  }
 
 
 
