--- a/explore.scss
+++ b/explore.scss
@@ -421,11 +421,34 @@ transform: scale(1.2);
   
 }
 
+@media screen and (min-width:341px) and (max-width:575px){
+  .exploreImage{
+    width:100%;
+  }
+
+
+
+  .joinContainer{
+    grid-template-columns: 300px;
+    justify-content: center;
+  }
+
+  .footerContent{
+    justify-content: center;
+  }
+
+.footerUpperTitle{
+    text-align: center;
+  }
+}
+
 @media screen and (min-width:576px) and (max-width:1000px){
   
   .exploreImage{
     width:100%;
   }
+
+
 
   .exploreContent,
   .joinContainer
@@ -436,12 +459,17 @@ transform: scale(1.2);
   }
 
 .footerContent{
-  grid-template-columns: repeat(2,max-content);
-  justify-content: space-between;
-  padding:1.5rem 1rem;
+
+ justify-content: center;
+ 
 }
+
+.footerUpperTitle{
+  text-align: center;
+}
+
   .footerData{
-    grid-template-columns: repeat(4,max-content);
+    grid-template-columns: repeat(2,max-content);
   }
 }
 
@@ -461,9 +489,40 @@ transform: scale(1.2);
       display: none;
     }
 
+
+    .explore{
+      padding-top:1.5rem;
+    }
   .exploreImage{
     width:100%;
   }
+
+  .exploreContent{
+    grid-template-columns: 600px 200px;
+    justify-content: space-between;
+   
+  }
+
+  .sectionTitle{
+    text-align: initial;
+    margin-bottom: 1rem;
+  }
+
+  .exploreDescription{
+    text-align: initial;
+  }
+
+ 
+  .joinContainer
+  {
+    
+    grid-template-columns: 400px 500px;
+    justify-content: center;
+  }
+
+ 
+
+
 
   .footerContent{
     grid-template-columns: repeat(2,max-content);
