About Page Media Queries

--- a/index.css
+++ b/index.css
@@ -436,5 +436,4 @@ img {
     flex-direction: row-reverse;
     justify-content: space-between;
   }
-}
-/* For large devices *//*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
