Media queries of Discover Page

--- a/popular.scss
+++ b/popular.scss
@@ -99,10 +99,10 @@ img {
 }
 
 /*=============== REUSABLE CSS CLASSES ===============*/
-.container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
-}
+// .container {
+//   max-width: 1120px;
+//   margin-inline: 1.5rem;
+// }
 
 .grid {
   display: grid;
