--- a/about.css
+++ b/about.css
@@ -93,8 +93,8 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .grid {
@@ -153,6 +153,11 @@ img {
   z-index: -1;
 }
 
+.navbarcontent {
+  display: flex;
+  justify-content: space-between;
+}
+
 .aboutContainer {
   row-gap: 3rem;
   justify-content: center;
@@ -174,6 +179,10 @@ img {
   transition: transform 0.4s;
 }
 
+.aboutImage:hover {
+  transform: scale(1.2);
+}
+
 .aboutShadow {
   position: absolute;
   top: 0px;
@@ -181,6 +190,27 @@ img {
   width: 100%;
   height: 100%;
   background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 50%, hsl(0, 0%, 0%) 125%);
+}
+
+.travelcard {
+  width: 30%;
+}
+
+.goalcard:first-of-type, .goalcard:last-of-type {
+  background-color: #ed1b24;
+}
+
+.goalcard:nth-of-type(2) {
+  background-color: #d21a22;
+}
+
+#strength {
+  background-color: #f7f7f7;
+}
+
+.strengthcardimg .fa-solid {
+  font-size: 3rem;
+  color: red;
 }
 
 .footer {
@@ -284,11 +314,23 @@ img {
   }
 }
 @media screen and (max-width: 340px) {
+  .flex {
+    flex-direction: column;
+  }
+  .travelcard {
+    width: 100%;
+  }
   .footerData {
     grid-template-columns: max-content;
   }
 }
 @media screen and (min-width: 341px) and (max-width: 575px) {
+  .flex {
+    flex-wrap: wrap;
+  }
+  .travelcard {
+    width: 35%;
+  }
   .footerLogo {
     width: 100%;
     text-align: center;
@@ -302,6 +344,21 @@ img {
   }
 }
 @media screen and (min-width: 576px) and (max-width: 767px) {
+  #travelwithuscontent {
+    display: grid;
+    grid-template-columns: repeat(2, 250px);
+    row-gap: 1rem;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+    justify-content: center;
+  }
+  .travelcard {
+    width: 100%;
+  }
+  .goalcontent {
+    display: grid;
+    grid-template-columns: repeat(2, 250px);
+  }
   .footerheading {
     text-align: center;
   }
