--- a/popular.scss
+++ b/popular.scss
@@ -109,6 +109,17 @@ img {
   gap: 1.5rem;
 }
 
+.flex{
+  display:flex;
+  gap:2rem;
+
+}
+
+.container{
+  width:80%;
+  margin:0 auto;
+}
+
 .section {
   padding-block: 5rem 1rem;
 }
@@ -183,6 +194,56 @@ img {
    ,
    hsl(0,0%,0%)125%);
 }
+
+
+// asia tour 
+.tourcommonheading{
+  margin-bottom: 1.5rem;
+  text-align: center;
+
+  p{
+    font-size:1.5rem;
+  }
+
+}
+
+
+.tourcardmiddletext{
+  margin-top:1rem;
+}
+
+.tourcardmiddletext{
+  p{
+    margin-top:0.3rem;
+  }
+}
+
+.tourcardlowertext{
+  margin-top:0.3rem;
+  display:flex;
+  justify-content: space-between;
+}
+
+// europe tour 
+
+.europecontent{
+  justify-content: space-between;
+}
+
+.europecard{
+  width: 30%;
+}
+.europecardimage{
+  // width: 268px;
+ height:229px;
+
+  img{
+   width: 100%;
+   height: 100%;
+  }
+}
+
+
 
 // footer 
 
