--- a/about.scss
+++ b/about.scss
@@ -226,6 +226,9 @@ img {
 // goal section 
 
 
+.goalcard{
+  width:50%
+}
 
 .goalcard:first-of-type,.goalcard:last-of-type{
   background-color: #ed1b24;
