--- a/explore.css
+++ b/explore.css
@@ -93,12 +93,17 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .grid {
   display: grid;
+  gap: 1.5rem;
+}
+
+.flex {
+  display: flex;
   gap: 1.5rem;
 }
 
@@ -249,6 +254,57 @@ img {
   width: 100%;
   height: 100%;
   background: linear-gradient(180deg, hsla(0, 0%, 0%, 0) 50%, hsl(0, 0%, 0%) 125%);
+}
+
+.testimonialsheading {
+  text-align: center;
+}
+
+.testimonialsheading h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+}
+.testimonialsheading p {
+  margin-bottom: 1rem;
+}
+
+.testimonialcards {
+  border: 2px solid white;
+  padding: 1rem;
+  background-color: #faf8f2;
+  width: 60%;
+}
+
+.testimonialimage {
+  align-items: center;
+  margin-bottom: 1.5rem;
+}
+.testimonialimage img {
+  border-radius: 50%;
+}
+
+.testimonialtitle {
+  margin-bottom: 1.5rem;
+}
+.testimonialtitle p {
+  font-weight: bold;
+  text-align: center;
+}
+
+.featuredpackageheading {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+.featuredpackageheading h2 {
+  margin-bottom: 1.5rem;
+}
+.featuredpackageheading p {
+  font-size: 1.5rem;
+}
+
+.featurepackagecontent {
+  text-align: center;
 }
 
 .footer {
