--- a/index.scss
+++ b/index.scss
@@ -306,6 +306,14 @@ img {
   transform: scale(1.2);
 }
 
+.homeCard{
+  height: 100%;
+}
+
+.homeCardImg{
+  height: 100%;
+}
+
 /*=============== BUTTON ===============*/
 
 
