--- a/popular.css
+++ b/popular.css
@@ -212,6 +212,10 @@ img {
   height: 100%;
 }
 
+.tourcardmiddletext {
+  color: white;
+}
+
 .footer {
   padding-block: 2.5rem;
   background-color: var(--container-color);
@@ -294,6 +298,15 @@ img {
   }
 }
 @media screen and (min-width: 341px) and (max-width: 575px) {
+  .asiatourcontent {
+    flex-direction: column;
+  }
+  .europecontent {
+    flex-direction: column;
+  }
+  .europecard {
+    width: 100%;
+  }
   .footerLogo {
     width: 100%;
     text-align: center;
@@ -307,6 +320,15 @@ img {
   }
 }
 @media screen and (min-width: 576px) and (max-width: 767px) {
+  .asiatourcontent {
+    flex-direction: column;
+  }
+  .europecontent {
+    flex-direction: column;
+  }
+  .europecard {
+    width: 100%;
+  }
   .footerheading {
     text-align: center;
   }
