--- a/index.scss
+++ b/index.scss
@@ -100,8 +100,8 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 1120px;
-  margin-inline: 1.5rem;
+width: 80%;
+margin:0 auto;
 }
 
 .grid {
